crates/forge_services/src/tools/task/snapshots/forge_services__tools__task__task_manage__tests__empty_list.snap
---
source: crates/forge_services/src/tools/task/task_manage.rs
expression: actual
---
<task_list_result>
<message>No pending tasks found.</message>
<stats>
<total_tasks>0</total_tasks>
<done_tasks>0</done_tasks>
<pending_tasks>0</pending_tasks>
<in_progress_tasks>0</in_progress_tasks>
</stats>
</task_list_result>
