crates/forge_services/src/tools/task/snapshots/forge_services__tools__task__task_manage__tests__pop_front.snap
---
source: crates/forge_services/src/tools/task/task_manage.rs
expression: result
---
<task_list_result>
<next_task>
<task id="0">
<content>Task to pop</content>
<status>In Progress</status>
</task>

</next_task>
<stats>
<total_tasks>1</total_tasks>
<done_tasks>0</done_tasks>
<pending_tasks>0</pending_tasks>
<in_progress_tasks>1</in_progress_tasks>
</stats>
</task_list_result>
